--- a/racine/scss/base/_typo.scss
+++ b/racine/scss/base/_typo.scss
@@ -15,6 +15,7 @@
  *
  */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+@import url('https://fonts.cdnfonts.com/css/adventure');
 
 h1,
 .h1 {
